# Transfusion

./: README.md  pyproject.toml  requirements.txt  sample.py  train.py
data/ImageNet/: README.md  imagenet.py  index_synset.yaml
diffusion/: gaussian_diffusion.py
docs/: report.md
models/: llama.py  modeling_transfusion.py  utils.py
scripts/: train.sh  train_lora.sh  transfusion.py
transfusion/: __init__.py  conversation.py  mm_utils.py  utils.py
transfusion/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  transfusion_arch.py  utils.py
transfusion/model/diffusion/: gaussian_diffusion.py
transfusion/model/language_model/: transfusion_llama.py
transfusion/model/multimodal_encoder/: builder.py  vae_encoder.py
transfusion/model/multimodal_projector/: builder.py  unet_projector.py
transfusion/train/: train.py  train_mem.py  train_xformers.py  transfusion_trainer.py
