[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transfusion"
version = "0.0.1"
description = "Transfusion: Predict the Next Token and Diffuse Images with One Multi-Modal Model"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch==2.5.1", "torchvision==0.20.1",
    "diffusers==0.33.0",
    "transformers==4.50.0", "tokenizers==0.21.4", "sentencepiece==0.2.0", "shortuuid",
    "accelerate==1.3.0", "peft==0.14.0", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.4.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.8.0", "einops-exts==0.0.4", "timm==0.9.10",
]

[project.optional-dependencies]
train = ["deepspeed==0.15.4", "ninja", "wandb"]
build = ["build", "twine"]